2009-11-15 Alexander Malysh <amalysh at kannel.org>
    * gw/wap_push_ppg.c: allow requesting DLRs without dlr-url.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2009-11-15 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: applied patch that minimize possibility of wrong re-assembling of
      concatenated MO messages.

2009-11-11 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c, gw/bearerbox.c, gw/smscconn.[ch], gw/smscconn_p.h: applied patch
      that adds separate dlr counters on the status page.
      Thanks to Alejandro Guerrieri <aguerrieri at kannel.org> fir this patch.

2009-11-09 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: fixed crashes on Snow Leopard 64Bit.
      Thanks to Paul Bagyenda <bagyenda at dsmagic.com> for this patch

2009-11-01 Alexander Malysh <amalysh at kannel.org>
    * gw/numhash.c, gw/bb_smscconn.c: fixed possible crash by reloading
      white/blask lists via HTTP interface.

2009-10-22 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_mssql.c, gw/dlr_mysql.c, gw/dlr_oracle.c, gw/dlr_pgsql.c, gw/dlr_sdb.c:
      added warnings if DLR was not inserted/updated/deleted but no error occurs
      e.g. row to update not found.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.
      [Msg-Id: <001801ca530c$43c24ac0$02b2a8c0@tardis>

2009-10-13 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_mysql.c: applied patch that fixes table name and field names that
      use reserved keywords.
      See http://dev.mysql.com/doc/refman/5.0/en/identifiers.html for details.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.

2009-09-20 Alexander Malysh <amalysh at kannel.org>
    * gw/msg.c: fixed crash when wrong packet received on bearerbox port.
      Thanks to Michael Zervakis <michael at zervakis.com> for report.
      [Msg-Id: <4AB3A08C.3050408@zervakis.com>]

2009-09-17  Stipe Tolj  <stolj at kannel.org>