@@ -1,3 +1,10 @@
+2009-11-23 Alexander Malysh <amalysh at kannel.org>
+    * gw/dlr_pgsql.c: applied patch that escapes table name and fields.
+      Quoting an identifier also makes it case-sensitive, whereas unquoted names are
+      always folded to lower case. CB.
+      See http://www.postgresql.org/docs/8.0/static/sql-syntax.html#SQL-SYNTAX-IDENTIFIERS
+      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.
+
 2009-11-15 Alexander Malysh <amalysh at kannel.org>
     * gw/wap_push_ppg.c: allow requesting DLRs without dlr-url.
       Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.
